--- a/firmware/targets/AtlasAtcaLinkAggBp10GbE_4Lane/Makefile
+++ b/firmware/targets/AtlasAtcaLinkAggBp10GbE_4Lane/Makefile
@@ -1,5 +1,8 @@
+# Using XVC Debug bridge
+export USE_XVC_DEBUG = 1
+
 # Define Firmware Version Number
-export PRJ_VERSION = 0x000000003
+export PRJ_VERSION = 0x000000005
 
 # Define target output
 target: prom
