--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 *.dcp filter=lfs diff=lfs merge=lfs -text
 *.mcs filter=lfs diff=lfs merge=lfs -text
 *.bit filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
 *.gz  filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.ZIP filter=lfs diff=lfs merge=lfs -text
