--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "firmware/submodules/rce-gen3-fw-lib"]
 	path = firmware/submodules/rce-gen3-fw-lib
 	url = git@github.com:slaclab/rce-gen3-fw-lib
+[submodule "firmware/submodules/lpgbt-fpga"]
+	path = firmware/submodules/lpgbt-fpga
+	url = https://gitlab.cern.ch/gbt-fpga/lpgbt-fpga
