--- a/.gitmodules
+++ b/.gitmodules
@@ -17,5 +17,8 @@
 	path = firmware/submodules/rce-gen3-fw-lib
 	url = git@github.com:slaclab/rce-gen3-fw-lib
 [submodule "firmware/submodules/lpgbt-fpga"]
-	path = firmware/submodules/lpgbt-fpga
+	path = firmware/submodules/lpgbt/lpgbt-fpga
 	url = https://gitlab.cern.ch/gbt-fpga/lpgbt-fpga
+[submodule "firmware/submodules/axi-pcie-core"]
+	path = firmware/submodules/axi-pcie-core
+	url = git@github.com:slaclab/axi-pcie-core
