--- a/.gitattributes
+++ b/.gitattributes
@@ -7,4 +7,5 @@
 *.ZIP filter=lfs diff=lfs merge=lfs -text
 *.dat filter=lfs diff=lfs merge=lfs -text
 *.hex filter=lfs diff=lfs merge=lfs -text
+*.mem filter=lfs diff=lfs merge=lfs -text
 *.slabtimeproj filter=lfs diff=lfs merge=lfs -text
