--- a/.gitmodules
+++ b/.gitmodules
@@ -15,10 +15,10 @@
 	url = git@github.com:slaclab/rce-gen3-fw-lib
 [submodule "firmware/submodules/lpgbt-fpga"]
 	path = firmware/submodules/lpgbt/lpgbt-fpga
-	url = https://gitlab.cern.ch/gbt-fpga/lpgbt-fpga
+	url = https://gitlab.cern.ch/lruckman/lpgbt-fpga
 [submodule "firmware/submodules/axi-pcie-core"]
 	path = firmware/submodules/axi-pcie-core
 	url = git@github.com:slaclab/axi-pcie-core
 [submodule "firmware/submodules/lpgbt/lpgbt-emul"]
 	path = firmware/submodules/lpgbt/lpgbt-emul
-	url = https://gitlab.cern.ch/gbt-fpga/lpgbt-emul
+	url = https://gitlab.cern.ch/lruckman/lpgbt-emul
