--- a/firmware/releases.yaml
+++ b/firmware/releases.yaml
@@ -33,41 +33,37 @@ Targets:
     Extensions:
       - bit
       - mcs
-  ###############################################
   DpmIbertTester:
     ImageDir: targets/RceDpm/DpmIbertTester/images
-    Extensions: bit
+    Extensions:
+      - bit
   DpmRudpNode:
     ImageDir: targets/RceDpm/DpmRudpNode/images
-    Extensions: bit
+    Extensions:
+      - bit
   DpmPgp3_6Gbps:
     ImageDir: targets/RceDpm/DpmPgp3_6Gbps/images
-    Extensions: bit
-  ###############################################
+    Extensions:
+      - bit
   AtlasRd53FmcXilinxKcu105_EmuLpGbt:
     ImageDir: targets/XilinxKcu105/AtlasRd53FmcXilinxKcu105_EmuLpGbt/images
-    Extensions: bit
-  ###############################################
+    Extensions:
+      - bit
   XilinxZcu102LpGbt:
     ImageDir: targets/XilinxZcu102/XilinxZcu102LpGbt/images
-    Extensions: bin
-  ###############################################
+    Extensions:
+      - bin
 Releases:
   all:
     Primary: True
     Targets:
-      ###############################################
       - AtlasAtcaLinkAggRd53Rtm_EmuLpGbt
       # - AtlasAtcaLinkAggRd53Rtm_BackplaneEth
       # - AtlasAtcaLinkAggTestFrontPanelSgmii
-      ###############################################
       - DpmIbertTester
       - DpmRudpNode
       - DpmPgp3_6Gbps
-      ###############################################
       - AtlasRd53FmcXilinxKcu105_EmuLpGbt
-      ###############################################
       - XilinxZcu102LpGbt
-      ###############################################
     Types:
       - Rogue
